Fix for Bug#4079 "error checking in prepared statements": reset mysql->status if there was an error in row reading.